# telecom_customer_churn_prediction

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
models/: best_churn_model.pth
notebooks/: 01_data_exploration.ipynb  02_feature_engineering.ipynb  03_ann_model.ipynb  04_model_evaluation.ipynb  05_business_insights.ipynb  mlflow.db
notebooks/mlruns/1/models/m-422f4426aade4a0895644962e51a429e/artifacts/: MLmodel  python_env.yaml
notebooks/mlruns/1/models/m-422f4426aade4a0895644962e51a429e/artifacts/data/: model.pth
notebooks/mlruns/2/models/m-a2abcc1f66aa46519d798b467549ac04/artifacts/: MLmodel  conda.yaml  requirements.txt
notebooks/mlruns/2/models/m-a2abcc1f66aa46519d798b467549ac04/artifacts/data/: model.pth
notebooks/models/: epoch_43.pth  high_risk_customers.csv
reports/: customers_with_churn_prob.csv
telecom_customer_churn_prediction/: __init__.py  config.py  dataset.py  evaluate.py  features.py  insights.py  main.py  model.py  plots.py  train.py
telecom_customer_churn_prediction/modeling/: predict.py  train.py
