[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "telecom_customer_churn_prediction"
version = "0.0.1"
description = "This project focuses on predicting customer churn in a telecom company using an Artificial Neural Network (ANN). Customer behavioral and demographic data were preprocessed through cleaning, encoding, and feature scaling before model training. The ANN model was trained to classify whether a customer is likely to churn (1) or stay (0). Model performance was evaluated using accuracy, precision, recall, and confusion matrix. The project also provides actionable business insights by identifying key factors contributing to churn, enabling telecom companies to implement targeted retention strategies and reduce customer loss."
authors = [
  { name = "Rajendran S" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["telecom_customer_churn_prediction"]
include = ["pyproject.toml", "telecom_customer_churn_prediction/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["telecom_customer_churn_prediction"]
force-sort-within-sections = true

